# Luramas

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  CONTRIBUTING.md  README.md  conanfile.txt
Luramas/framework/: builtins.hpp  color.hpp  common.hpp  debug.hpp
Luramas/framework/closures/: closures.cpp  closures.hpp
Luramas/framework/closures/processor/: flags.cpp
Luramas/framework/common/: common.hpp  constants.hpp  containers.hpp  debug.hpp  error.hpp  filesystem.hpp  math.hpp  psuedo_keywords.hpp  recursion.hpp  string.hpp  tools.hpp
Luramas/framework/common/code/: debug.cpp  error.cpp  filesystem.cpp  math.cpp  string.cpp
Luramas/framework/common/code/types/: arith.cpp
Luramas/framework/common/types/: arith.hpp  generics.hpp  types.hpp
Luramas/framework/disassembler/CIL/: disassembler.cpp  disassembler.hpp  optable.hpp
Luramas/framework/disassembler/JVM/: disassembler.cpp  disassembler.hpp  optable.hpp
Luramas/framework/disassembler/PY/: disassembler.cpp  disassembler.hpp  optable.hpp
Luramas/framework/disassembler/UDON/V1/: disassembler.cpp  disassembler.hpp  optable.hpp
Luramas/framework/disassembler/lua/Lua_5.3.6/: disassembler.cpp  disassembler.hpp  op_table.hpp
Luramas/framework/disassembler/luau/V6/: disassembler.cpp  disassembler.hpp  op_table.hpp
Luramas/framework/il/fs/: fs.cpp  fs.hpp
Luramas/framework/il/il/: il.hpp
Luramas/framework/il/il/architecture/: architecture.hpp  emitter.hpp
Luramas/framework/il/il/builder/: basic_builder.cpp  basic_builder.hpp
Luramas/framework/il/il/resolver/: resolver.cpp
Luramas/framework/il/il/tools/: disassembler.cpp  disassembler.hpp
Luramas/framework/il/il/transformers/: transformers.cpp  transformers.hpp
Luramas/framework/il/il/validate/: validate.cpp
Luramas/framework/il/lexer/: lexer.cpp  lexer.hpp
Luramas/framework/il/libary/: library.cpp  library.hpp
Luramas/framework/il/lifter/builder/: builder.hpp  builtin.hpp  keywords.hpp
Luramas/framework/il/lifter/parser/: parser.hpp
Luramas/framework/il/lifter/resolver/: resolver.hpp
Luramas/framework/ir/: constants.hpp  definitions.hpp  flags.hpp  ir.hpp  ir_defs.cpp  ir_defs.hpp  warnings.hpp
Luramas/framework/ir/analysis/: common.hpp
Luramas/framework/ir/analysis/code/: regs.cpp  tags.cpp
Luramas/framework/ir/builder/: builder.cpp  builder.hpp  ebuilder.cpp
Luramas/framework/ir/code/: generate.cpp  generate.hpp
Luramas/framework/ir/code/strs/: strs.cpp  strs.hpp
Luramas/framework/ir/code/tools/: smart_variables.cpp  tools.hpp
Luramas/framework/ir/code/types/: types.hpp
Luramas/framework/ir/data/: data.cpp
Luramas/framework/ir/data/exprs/: clone.cpp  compare.cpp  contains.cpp  emitters.cpp  extract.cpp  kinds.cpp  misc.cpp  str.cpp  (+5 more)
Luramas/framework/ir/execute/: data.hpp  definitions.hpp  execution.hpp  ir_kinds.hpp
Luramas/framework/ir/fs/: fs.cpp  fs.hpp
Luramas/framework/ir/fuzzer/: fuzzer.cpp  fuzzer.hpp
Luramas/framework/ir/lifter/: definition_tools.cpp  definitions.hpp  generation.hpp  lifter.cpp  passes.hpp
Luramas/framework/ir/memory/: memory.cpp  memory.hpp
Luramas/framework/ir/parser/: common.hpp
Luramas/framework/ir/safety/: safety.cpp  safety.hpp
Luramas/framework/ir/standardize/: annotations.cpp  standardize.hpp
Luramas/framework/ir/symbols/: symbols.cpp  symbols.hpp
Luramas/framework/ir/virtual_functions/: table.cpp  virtual_functions.hpp
Luramas/framework/misc/: types.cpp  types.hpp
Luramas/shared/boostpp/: flat_sets.hpp  vector.hpp
Luramas/shared/luramas/formatting/: formatting.cpp  formatting.hpp
Luramas/shared/luramas/profile/: profile.cpp  profile.hpp
examples/: .clang-format  main.cpp
examples/LuaU/: compile_luau.lua
examples/LuaU/V6/: example.cpp  example.hpp
examples/lua/Lua_5.3.6/: example.cpp  example.hpp
examples/x86-64/: example.cpp  example.hpp
helpers/: README.md
helpers/CPL/: CPL.hpp  helpers.hpp
helpers/CPL/builtins/: CONTROL_FLOW.hpp  CPU.hpp  IO.hpp  RANDOMNESS.hpp
helpers/CPL/generics/arith/: piecewise.hpp
helpers/CPL/generics/bitwise/: parity.hpp  reductions.hpp
scripts/: README.md
scripts/built_in_builder/: README.md  intel_intrins_xml.py
scripts/intel_built_in_builder/: README.md
scripts/x86_emitter/: README.md  emitter.py
scripts/x86_intel_msr_builder/: README.md  output.hpp  x86_intel_msr_builder.py
(+306 files in other folders)
